# olx-car-parser

./: .gitignore  ARCHITECTURE.md  Modelfile  PLAN.md  README.md  enrich_local.py  package-lock.json  package.json  pyproject.toml  requirements.txt  wrangler.jsonc  wrangler.toml
.streamlit/: config.toml
adapters/: adapter_config.json
car-parser-3b-fused/: README.md  config.json  model.safetensors.index.json  tokenizer_config.json
config/: brand_aliases.json  generations.json  mlx_lora.yaml  model_aliases.json  models_watchlist.yaml  settings.yaml
dashboard-static/: README.md  index.html
data/: Modelfile  corrective_mileage.jsonl  generations.json  generations_seed.json  olx_cars.db-shm  train.jsonl  training_data.jsonl  training_data_1057_backup.jsonl  training_data_v1_backup.jsonl  valid.jsonl
flipper-club/: README.md
notebooks/: finetune_car_parser.ipynb
scripts/: annotate_new_fields.py  annotate_rules.py  backfill_olx_photo_count.py  backfill_photo_damage_flagged.py  backfill_sellers.py  build_dashboard_data.py  build_harvest_imagefolder.py  build_hot_deals.py  build_stlite_bundle.py  build_v3_dataset.py  ctl.sh  damage_harvest.py  damage_harvest_olx.py  damage_harvest_vlm_screen.py  decision_diagnostics.py  deploy.sh  deploy_model.sh  detect_relists.py  eval_damage_v3.py  eval_model.py  feature_ablation.py  fix_future_first_seen_at.py  heal_false_sold.py  label_damage_vlm.py  mine_damage_fps.py  normalize_brands.py  photo_damage_benchmark.py  photo_damage_classifier_eval.py  photo_damage_clip_triage.py  photo_damage_compare.py  photo_damage_label_sampler.py  photo_damage_poc.py  photo_verify_damage.py  rederive_damage_severity.py  remote_setup.sh  restore_falsely_deactivated.py  score_anomalies.py  score_hazard.py  setup-ollama.sh  train_damage_classifier.py  (+2 more)
src/: cli.py
tests/: conftest.py  test_anomaly.py  test_backfill_sellers.py  test_brand_normalize.py  test_cli_verify_photos.py  test_computed_columns.py  test_damage_v3_pipeline.py  test_database_migration.py  test_decision.py  test_flipper.py  test_generations.py  test_hazard.py  test_interest_model.py  test_llm_enrichment.py  test_pipeline.py  (+17 more)
(+244 files in other folders)
