[project]
name = "olx-car-parser"
version = "0.1.0"
description = "OLX private car listings parser with price analytics"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "typer>=0.12",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "rich>=13.0",
    "streamlit>=1.38",
    "plotly>=5.22",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "joblib>=1.3",
    # Photo damage classifier (verify-photos CLI).
    "torch>=2.1",
    "torchvision>=0.16",
    "pillow>=10.0",
    # CLIP zero-shot exterior pre-filter for verify-photos (issue #3).
    "transformers>=4.40",
    # PT-plate OCR for verify-photos. Pulls opencv-python-headless +
    # scikit-image transitively (~150 MB venv); PlateReader defers the
    # ``import easyocr`` to instantiation so consumers that only need
    # ``normalize_plate`` don't pay the import cost.
    "easyocr>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
olx-parser = "src.cli:app"

[tool.pytest.ini_options]
markers = ["smoke: live API health checks"]

[tool.ruff]
target-version = "py311"
line-length = 100
